mobile nav fix, winner fix, input overflow hidden

--- a/src/components/text-input/text-input.scss
+++ b/src/components/text-input/text-input.scss
@@ -5,6 +5,7 @@
     display: flex;
     justify-content: stretch;
     margin: 16px 0;
+    overflow: hidden;
 }
 
 .text-input textarea {
